musl/issues/pgenlibr.out
* installing to library '/home/runner/R-patched/lib'
* installing *source* package 'pgenlibr' ...
** this is package 'pgenlibr' version '0.5.3'
** package 'pgenlibr' successfully unpacked and MD5 sums checked
** using staged installation
checking for pkg-config... /usr/bin/pkg-config
checking whether the C++ compiler works... yes
checking for C++ compiler default output file name... a.out
checking for suffix of executables... 
checking whether we are cross compiling... no
checking for suffix of object files... o
checking whether the compiler supports GNU C++... yes
checking whether g++ -std=gnu++17 accepts -g... yes
checking for g++ -std=gnu++17 option to enable C++11 features... none needed
configure: C++ compiler: g++ -std=gnu++17
configure: zstd 1.5.7 library detected -- skipping zstd compilation
configure: libdeflate 1.23 library detected -- skipping libdeflate compilation
configure: simde not detected by pkg-config; falling back on system header file check
no
configure: creating ./config.status
config.status: creating src/Makevars
** libs
using C++ compiler: 'g++ (Alpine 14.2.0) 14.2.0'
make[1]: Entering directory '/var/local/PKGS/CRAN/pgenlibr/src'
g++ -std=gnu++17 -I"/home/runner/R-patched/build/include" -DNDEBUG -DNO_UNALIGNED -DPGENLIB_NOPRINT -DIGNORE_BUNDLED_ZSTD -DIGNORE_BUNDLED_LIBDEFLATE     -I../inst/include -I'/home/runner/R-patched/lib/Rcpp/include' -I/usr/local/include    -fpic  -O2 -mtune=native -Wno-ignored-attributes   -c pvar.cpp -o pvar.o
g++ -std=gnu++17 -I"/home/runner/R-patched/build/include" -DNDEBUG -DNO_UNALIGNED -DPGENLIB_NOPRINT -DIGNORE_BUNDLED_ZSTD -DIGNORE_BUNDLED_LIBDEFLATE     -I../inst/include -I'/home/runner/R-patched/lib/Rcpp/include' -I/usr/local/include    -fpic  -O2 -mtune=native -Wno-ignored-attributes   -c pgenlibr.cpp -o pgenlibr.o
g++ -std=gnu++17 -I"/home/runner/R-patched/build/include" -DNDEBUG -DNO_UNALIGNED -DPGENLIB_NOPRINT -DIGNORE_BUNDLED_ZSTD -DIGNORE_BUNDLED_LIBDEFLATE     -I../inst/include -I'/home/runner/R-patched/lib/Rcpp/include' -I/usr/local/include    -fpic  -O2 -mtune=native -Wno-ignored-attributes   -c RcppExports.cpp -o RcppExports.o
g++ -std=gnu++17 -I"/home/runner/R-patched/build/include" -DNDEBUG -DNO_UNALIGNED -DPGENLIB_NOPRINT -DIGNORE_BUNDLED_ZSTD -DIGNORE_BUNDLED_LIBDEFLATE     -I../inst/include -I'/home/runner/R-patched/lib/Rcpp/include' -I/usr/local/include    -fpic  -O2 -mtune=native -Wno-ignored-attributes   -c ../inst/include/include/plink2_base.cc -o ../inst/include/include/plink2_base.o
g++ -std=gnu++17 -I"/home/runner/R-patched/build/include" -DNDEBUG -DNO_UNALIGNED -DPGENLIB_NOPRINT -DIGNORE_BUNDLED_ZSTD -DIGNORE_BUNDLED_LIBDEFLATE     -I../inst/include -I'/home/runner/R-patched/lib/Rcpp/include' -I/usr/local/include    -fpic  -O2 -mtune=native -Wno-ignored-attributes   -c ../inst/include/include/plink2_bits.cc -o ../inst/include/include/plink2_bits.o
g++ -std=gnu++17 -I"/home/runner/R-patched/build/include" -DNDEBUG -DNO_UNALIGNED -DPGENLIB_NOPRINT -DIGNORE_BUNDLED_ZSTD -DIGNORE_BUNDLED_LIBDEFLATE     -I../inst/include -I'/home/runner/R-patched/lib/Rcpp/include' -I/usr/local/include    -fpic  -O2 -mtune=native -Wno-ignored-attributes   -c ../inst/include/include/pgenlib_ffi_support.cc -o ../inst/include/include/pgenlib_ffi_support.o
g++ -std=gnu++17 -I"/home/runner/R-patched/build/include" -DNDEBUG -DNO_UNALIGNED -DPGENLIB_NOPRINT -DIGNORE_BUNDLED_ZSTD -DIGNORE_BUNDLED_LIBDEFLATE     -I../inst/include -I'/home/runner/R-patched/lib/Rcpp/include' -I/usr/local/include    -fpic  -O2 -mtune=native -Wno-ignored-attributes   -c ../inst/include/include/pgenlib_misc.cc -o ../inst/include/include/pgenlib_misc.o
g++ -std=gnu++17 -I"/home/runner/R-patched/build/include" -DNDEBUG -DNO_UNALIGNED -DPGENLIB_NOPRINT -DIGNORE_BUNDLED_ZSTD -DIGNORE_BUNDLED_LIBDEFLATE     -I../inst/include -I'/home/runner/R-patched/lib/Rcpp/include' -I/usr/local/include    -fpic  -O2 -mtune=native -Wno-ignored-attributes   -c ../inst/include/include/pgenlib_read.cc -o ../inst/include/include/pgenlib_read.o
g++ -std=gnu++17 -I"/home/runner/R-patched/build/include" -DNDEBUG -DNO_UNALIGNED -DPGENLIB_NOPRINT -DIGNORE_BUNDLED_ZSTD -DIGNORE_BUNDLED_LIBDEFLATE     -I../inst/include -I'/home/runner/R-patched/lib/Rcpp/include' -I/usr/local/include    -fpic  -O2 -mtune=native -Wno-ignored-attributes   -c ../inst/include/include/plink2_bgzf.cc -o ../inst/include/include/plink2_bgzf.o
In file included from ../inst/include/include/plink2_bgzf.h:44,
                 from ../inst/include/include/plink2_bgzf.cc:17:
../inst/include/include/plink2_string.h: In function 'const char* plink2::strnul(const char*)':
../inst/include/include/plink2_string.h:157:30: error: 'rawmemchr' was not declared in this scope; did you mean 'memchr'?
  157 |   return S_CAST(CXXCONST_CP, rawmemchr(str, 0));
      |                              ^~~~~~~~~
../inst/include/include/plink2_base.h:293:48: note: in definition of macro 'S_CAST'
  293 | #  define S_CAST(type, val) (static_cast<type>(val))
      |                                                ^~~
../inst/include/include/plink2_string.h: In function 'const char* plink2::AdvToDelim(const char*, char)':
../inst/include/include/plink2_string.h:1118:30: error: 'rawmemchr' was not declared in this scope; did you mean 'rawmemchr3'?
 1118 |   return S_CAST(CXXCONST_CP, rawmemchr(str_iter, delim));
      |                              ^~~~~~~~~
../inst/include/include/plink2_base.h:293:48: note: in definition of macro 'S_CAST'
  293 | #  define S_CAST(type, val) (static_cast<type>(val))
      |                                                ^~~
make[1]: *** [/home/runner/R-patched/build/etc/Makeconf:209: ../inst/include/include/plink2_bgzf.o] Error 1
make[1]: Leaving directory '/var/local/PKGS/CRAN/pgenlibr/src'
make[1]: Entering directory '/var/local/PKGS/CRAN/pgenlibr/src'
make[1]: Leaving directory '/var/local/PKGS/CRAN/pgenlibr/src'
ERROR: compilation failed for package 'pgenlibr'
* removing '/home/runner/R-patched/lib/pgenlibr'
